force-app/main/default/objects/Compliment_and_Issue__c/Compliment_and_Issue__c.object-meta.xml
<CustomObject>
    <label>Compliment and Issue</label>
    <nameField>
        <displayFormat>CI-{00000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliments and Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>