force-app/main/default/objects/Compliment_and_Issue__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customs Regulation</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Company ID</fullName>
            </value>
            <value>
                <fullName>Shore Pass</fullName>
            </value>
            <value>
                <fullName>Taiwanese Entry Document</fullName>
            </value>
            <value>
                <fullName>Break Company Rules</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>