force-app/main/default/objects/Compliment_and_Issue__c/fields/Staff_Number__c.field-meta.xml
<CustomField>
    <fullName>Staff_Number__c</fullName>
    <label>Staff Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>